--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap:10px;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    
+}
