--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -3,6 +3,7 @@ nav {
     justify-content: space-evenly;  
     align-items: center;
     background-color: cornflowerblue;
+    margin-bottom: 10px;
 }
 
 .home {
