--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -3,3 +3,20 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap:10px;
 }
+
+.homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search {
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 500px) {
+    .all-articles{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
